--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/hospitals.css">
-  <title>Hospital-List</title>
+
+  <title>Hospitals</title>
 </head>
 
 <body>
+
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid text-left">
-      <a class="navbar-brand" href="#">
-        <img src="image.png" alt="" width="90" height="60">
-      </a>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add
-      </button>
 
+      <a class="navbar-brand" href="#"><img src="image.png" alt="" width="90" height="60"></a>
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add</button>
       <!-- Modal -->
       <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -32,15 +31,15 @@
             <div class="modal-body">
               <div class="form-floating mb-3">
                 <input type="name" class="form-control" id="hospName" placeholder="Name">
-                <label for="floatingName">Hospital Name</label>
+                <label for="hospName">Hospital Name</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="location" class="form-control" id="hospLocation" placeholder="Location">
-                <label for="floatingLocation">Location</label>
+                <label for="hospLocation">Hospital Location</label>
               </div>
               <div class="form-floating">
-                <input type="URL" class="form-control" id="hospURL" placeholder="hospURL">
-                <label for="floatingURL">Hospital URL</label>
+                <input type="text" class="form-control" id="hospStatus" placeholder="Status">
+                <label for="hospStatus">Hospital Status</label>
               </div>
             </div>
             <div class="modal-footer">
@@ -49,15 +48,14 @@
             </div>
           </div>
         </div>
-
       </div>
+
     </div>
   </nav>
 
   <div class="container-fluid">
-    <div class="container" id="hospitalslist"></div>
+    <div class="container" id="hospitalsList"></div>
   </div>
-
 
   <!-- Optional JavaScript; choose one of the two! -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -66,6 +64,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="js/hospitals.js"></script>
+
 </body>
 
 </html>
