--- a/public/beds.html
+++ b/public/beds.html
@@ -17,8 +17,8 @@
     <div class="container-fluid">
 
       <img class="navbar-brand navbar-custom" href="#" src="image.png" alt="logo">
-      <h2>ICU CONNECT</h2>
-      <button type="button" class="btn btn-primary" id="addNew" data-bs-toggle="modal" data-bs-target="#myModal">Add NewBed</button>
+      <h2 id="page_header"></h2>
+      <button type="button" class="btn btn-primary" id="addNew" data-bs-toggle="modal" data-bs-target="#myModal">Add New Bed</button>
 
       <div class="modal" id="myModal">
         <div class="modal-dialog">
@@ -30,21 +30,25 @@
             </div>
 
             <div class="modal-body">
+
               <div class="form-group">
                 <label for="bedName" class="form-label">Bed Number: </label>
-                <input type="text" class="form-control" id="bedName" placeholder="Enter Bed Number">
+                <input type="text" class="form-control" id="bedName" placeholder="Enter Bed Number"><br>
+                <input type="text" class="form-control" id="bedStatus" placeholder="Enter Bed Status" name="bedStatus"><br>
               </div>
+
               <div class="form-group">
                 <label for="pwd" class="form-label">Add Device:</label>
-                <input type="url" class="form-control" id="urldata" placeholder="Enter URL" name="urldata">
-                <input type="name" class="form-control" id="devicename" placeholder="Enter Device Name" name="devicename">
+                <input type="name" class="form-control" id="deviceName" placeholder="Enter Device Name" name="deviceName"><br>
+                <input type="url" class="form-control" id="deviceURL" placeholder="Enter URL" name="deviceURL"><br>
+                <input type="text" class="form-control" id="deviceStatus" placeholder="Enter Device Status" name="deviceStatus"><br>
               </div>
+
               <div>
-                <table class="table" id="tableval"> </table>
+                <table class="table" id="tableval"></table>
               </div>
-              <div>
-                <button type="button" class="btn btn-success" id="addDevice" name="addDevice">Add Device</button>
-              </div>
+
+              <div><button type="button" class="btn btn-success" id="addDevice" name="addDevice">Add Device</button></div>
             </div>
 
             <div class="modal-footer">
@@ -59,35 +63,12 @@
   </nav>
 
   <div class="continer-fluid" id="addhere">
-    <!-- <div class="d-flex align-items-start">
-        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-          <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Bed 1</button>
-          <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Bed 2</button>
-          <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill" data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Bed 3</button>
-          <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill" data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Bed 4</button>
-        </div>
-        <div class="tab-content" id="v-pills-tabContent">
-          <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-            <iframe src="http://192.168.0.134" width="1400" height="700"></iframe>
-          </div>
-          <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-            <iframe src="https://rtwohealthcare.com" width="1400" height="700"></iframe>
-          </div>
-          <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-            <iframe src="" width="1400" height="700"></iframe>
-          </div>
-          <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-            <iframe src="https://github.com/" width="1400" height="700"></iframe>
-          </div>
-        </div>
-      </div>  -->
+    <div id="main_container" class="d-flex align-items-start">
+      <div id="navbar" class="nav flex-column nav-pills me-3" role="tablist" aria-orientation="vertical"></div>
+      <div id="navpanel" class="tab-content"></div>
+    </div>
   </div>
 
-
-
-  <!-- Optional JavaScript; choose one of the two! -->
-
-  <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="js/beds.js"></script>
