--- a/public/hospitals.html
+++ b/public/hospitals.html
@@ -17,7 +17,12 @@
     <div class="container-fluid text-left">
 
       <a class="navbar-brand" href="#"><img src="image.png" alt="" width="90" height="60"></a>
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add</button>
+      <h2 id="page_header">Hospitals List</h2>
+      <div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add Hospital</button>
+        <button id="signoutbtn" type="button" class="btn btn-primary">Signout</button>
+      </div>
+
       <!-- Modal -->
       <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
