--- a/public/beds.html
+++ b/public/beds.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="css/beds.css" rel="stylesheet">
 
@@ -18,7 +17,10 @@
 
       <img class="navbar-brand navbar-custom" href="#" src="image.png" alt="logo">
       <h2 id="page_header"></h2>
-      <button type="button" class="btn btn-primary" id="addNew" data-bs-toggle="modal" data-bs-target="#myModal">Add New Bed</button>
+      <div>
+        <button type="button" class="btn btn-primary" id="addNew" data-bs-toggle="modal" data-bs-target="#myModal">Add Bed</button>
+        <button id="signoutbtn" type="button" class="btn btn-primary">Signout</button>
+      </div>
 
       <div class="modal" id="myModal">
         <div class="modal-dialog">
