--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.markuptag.com/bootstrap/5/js/bootstrap.bundle.min.js"></script>
-    <script src="js/login.js"></script>
+    <script type="module" src="js/config.js"></script>
+    <script type="module" src="js/login.js"></script>
 
 </body>
 
