--- a/public/beds.html
+++ b/public/beds.html
@@ -36,13 +36,26 @@
               <div class="form-group">
                 <label for="bedName" class="form-label">Bed Number: </label>
                 <input type="text" class="form-control" id="bedName" placeholder="Enter Bed Number"><br>
-                <input type="text" class="form-control" id="bedStatus" placeholder="Enter Bed Status" name="bedStatus"><br>
+                <!-- <input type="text" class="form-control" id="bedStatus" placeholder="Enter Bed Status" name="bedStatus"><br> -->
+                <label for="pwd" class="form-label">Bed Status:</label>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="bedStatus">
+                  <label class="form-check-label" for="flexRadioDefault1">
+                    Active
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="bedStatus" checked>
+                  <label class="form-check-label" for="flexRadioDefault2">
+                    Inactive
+                  </label>
               </div>
-
+              <br>
               <div class="form-group">
                 <label for="pwd" class="form-label">Add Device:</label>
                 <input type="name" class="form-control" id="deviceName" placeholder="Enter Device Name" name="deviceName"><br>
                 <input type="url" class="form-control" id="deviceURL" placeholder="Enter URL" name="deviceURL"><br>
+                <label for="pwd" class="form-label">Device Status:</label>
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="flexRadioDefault" id="deviceStatus">
                   <label class="form-check-label" for="flexRadioDefault1">
