--- a/public/beds.html
+++ b/public/beds.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
+  <title>Beds</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="css/beds.css" rel="stylesheet">
-
-  <title>Beds</title>
 </head>
 
 <body>
@@ -36,59 +35,54 @@
               <div class="form-group">
                 <label for="bedName" class="form-label">Bed Number: </label>
                 <input type="text" class="form-control" id="bedName" placeholder="Enter Bed Number"><br>
-                <!-- <input type="text" class="form-control" id="bedStatus" placeholder="Enter Bed Status" name="bedStatus"><br> -->
-                <label for="pwd" class="form-label">Bed Status:</label>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="bedStatus">
-                  <label class="form-check-label" for="flexRadioDefault1">
-                    Active
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="bedStatus" checked>
-                  <label class="form-check-label" for="flexRadioDefault2">
-                    Inactive
-                  </label>
-              </div>
-              <br>
-              <div class="form-group">
-                <label for="pwd" class="form-label">Add Device:</label>
-                <input type="name" class="form-control" id="deviceName" placeholder="Enter Device Name" name="deviceName"><br>
-                <input type="url" class="form-control" id="deviceURL" placeholder="Enter URL" name="deviceURL"><br>
-                <label for="pwd" class="form-label">Device Status:</label>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="deviceStatus">
-                  <label class="form-check-label" for="flexRadioDefault1">
-                    Active
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="deviceStatus" checked>
-                  <label class="form-check-label" for="flexRadioDefault2">
-                    Inactive
-                  </label>
+
+                <div>
+                  <label for="bedStatus" class="form-label">Bed Status:</label><br>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="bedStatus" value="active" id="bedStatusActive">
+                    <label class="form-check-label" for="bedStatusActive">Active</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="bedStatus" value="inactive" id="bedStatusInactive">
+                    <label class="form-check-label" for="bedStatusInactive">Inactive</label>
+                  </div>
+                </div><br>
+
+                <div class="form-group">
+                  <label for="deviceName" class="form-label">Add Devices</label>
+                  <input type="name" class="form-control" id="deviceName" placeholder="Enter Device Name" name="deviceName"><br>
+                  <input type="url" class="form-control" id="deviceURL" placeholder="Enter URL" name="deviceURL"><br>
+
+                  <div>
+                    <label for="deviceStatus" class="form-label">Device Status:</label><br>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="deviceStatus" value="active" id="deviceStatusActive">
+                      <label class="form-check-label" for="deviceStatusActive">Active</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input" type="radio" name="deviceStatus" value="inactive" id="deviceStatusInactive">
+                      <label class="form-check-label" for="deviceStatusInactive">Inactive</label>
+                    </div>
+                  </div>
+
                 </div>
 
+                <div>
+                  <table class="table" id="tableval"></table>
+                </div>
 
-              <!--     <input type="text" class="form-control" id="deviceStatus" placeholder="Enter Device Status" name="deviceStatus"><br>-->
-              </div>
-
-              <div>
-                <table class="table" id="tableval"></table>
+                <div><button type="button" class="btn btn-success" id="addDevice" name="addDevice">Add Device</button></div>
               </div>
 
-              <div><button type="button" class="btn btn-success" id="addDevice" name="addDevice">Add Device</button></div>
+              <div class="modal-footer">
+                <button type="submit" id="submitdata" class="btn btn-danger" data-bs-dismiss="modal">Save & close</button>
+              </div>
+
             </div>
-
-            <div class="modal-footer">
-              <button type="submit" id="submitdata" class="btn btn-danger" data-bs-dismiss="modal">Save & close</button>
-            </div>
-
           </div>
         </div>
-      </div>
 
-    </div>
+      </div>
   </nav>
 
   <div class="continer-fluid" id="addhere">
