--- a/public/hospitals.html
+++ b/public/hospitals.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
+  <title>Hospitals</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/hospitals.css">
-
-  <title>Hospitals</title>
 </head>
 
 <body>
@@ -23,7 +21,6 @@
         <button id="signoutbtn" type="button" class="btn btn-primary">Signout</button>
       </div>
 
-      <!-- Modal -->
       <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -40,23 +37,17 @@
                 <input type="location" class="form-control" id="hospLocation" placeholder="Location">
                 <label for="hospLocation">Hospital Location</label>
               </div>
-              <label for="pwd" class="form-label">Device Status:</label>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="hospStatus">
-                <label class="form-check-label" for="flexRadioDefault1">
-                  Active
-                </label>
+              <div>
+                <label for="hospStatus" class="form-label">Hospital Status</label><br>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="hospStatus" value="active" id="hospStatusActive">
+                  <label class="form-check-label" for="hospStatusActive">Active</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="hospStatus" value="inactive" id="hospStatusInactive">
+                  <label class="form-check-label" for="hospStatusInactive">Inactive</label>
+                </div>
               </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="hospStatus" checked>
-                <label class="form-check-label" for="flexRadioDefault2">
-                  Inactive
-                </label>
-              </div>
-              <!-- <div class="form-floating">
-                <input type="text" class="form-control" id="hospStatus" placeholder="Status">
-                <label for="hospStatus">Hospital Status</label>
-              </div> -->
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -73,9 +64,7 @@
     <div class="container" id="hospitalsList"></div>
   </div>
 
-  <!-- Optional JavaScript; choose one of the two! -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script type="module" src="js/config.js"></script>
   <script type="module" src="js/hospitals.js"></script>
