--- a/public/beds.html
+++ b/public/beds.html
@@ -51,7 +51,7 @@
                 <div class="form-group">
                   <label for="deviceName" class="form-label">Add Devices</label>
                   <input type="name" class="form-control" id="deviceName" placeholder="Enter Device Name" name="deviceName"><br>
-                  <input type="url" class="form-control" id="deviceURL" placeholder="Enter URL" name="deviceURL"><br>
+                  <input type="url" class="form-control" id="deviceID" placeholder="Enter Device ID" name="deviceID"><br>
 
                   <div>
                     <label for="deviceStatus" class="form-label">Device Status:</label><br>
