--- a/public/carousel.html
+++ b/public/carousel.html
@@ -14,7 +14,7 @@
 <body>
     <!-- <h2>Test</h2> -->
     <div class="container-fluid">
-        <h1 id="pgTitle" class="fw-light text-center text-lg-start mt-4 mb-0">Image Gallery</h1>
+        <h1 id="pageTitle" class="fw-light text-center text-lg-start mt-4 mb-0">Image Gallery</h1>
         <hr class="mt-2 mb-5">
         <div class="container border border-dark" style="width: 750px;">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
