Added ICU page and moved carousel.html inside div in  beds.html page

--- a/public/carousel.html
+++ b/public/carousel.html
@@ -17,7 +17,7 @@
         <h1 id="pageTitle" class="fw-light text-center text-lg-start mt-4 mb-0">Image Gallery</h1>
         <hr class="mt-2 mb-5">
         <div class="container border border-dark" style="width: 750px;">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide" data-interval="false">
                 <div id="carousel-indicators" class="carousel-indicators"></div>
                 <div id="carousel-inner" class="carousel-inner"></div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -41,6 +41,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="module" src="js/config.js"></script>
+    <script src="socket.io/socket.io.js"></script>
     <script type="module" src="js/carousel.js"></script>
 
 </body>
