--- a/public/beds.html
+++ b/public/beds.html
@@ -26,7 +26,7 @@
           <div class="modal-content">
 
             <div class="modal-header">
-              <h4 class="modal-title">Add New</h4>
+              <h4 class="modal-title">Add Bed</h4>
               <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
 
@@ -114,6 +114,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script type="module" src="js/config.js"></script>
+  <script src="socket.io/socket.io.js"></script>
   <script type="module" src="js/beds.js"></script>
 
 </body>
