delete button added

--- a/public/beds.html
+++ b/public/beds.html
@@ -106,7 +106,7 @@
   <div class="continer-fluid" id="addhere">
     <div id="main_container" class="d-flex align-items-start">
       <div id="navbar" class="nav flex-column nav-pills me-3" role="tablist" aria-orientation="vertical"></div>
-      <div id="navpanel" class="tab-content"></div>
+      <div id="navpanel" style="width: 80%;"></div>
     </div>
   </div>
 
